<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_pointer">+3 pointer</string>
    <string name="_2_pointer">+2 pointer</string>
    <string name="free_throw">Free throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="result">result</string>
</resources>
