<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bb3"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_4_dp"
                    android:layout_marginTop="@dimen/_12_dp"
                    android:layout_marginBottom="@dimen/_8_dp"
                    android:textSize="@dimen/_14_sp"
                    android:text="@string/team_a"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:text="@string/_0"
                    android:textSize="@dimen/_56_sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8_dp"
                    android:layout_marginLeft="@dimen/_24_dp"
                    android:layout_marginRight="@dimen/_24_dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/_3_pointer" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8_dp"
                    android:layout_marginLeft="@dimen/_24_dp"
                    android:layout_marginRight="@dimen/_24_dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/_2_pointer" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8_dp"
                    android:layout_marginLeft="@dimen/_24_dp"
                    android:layout_marginRight="@dimen/_24_dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/free_throw" />

            </LinearLayout>


            <View
                android:layout_width="@dimen/_1_dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"></View>

            <LinearLayout
                android:layout_width="@dimen/_0_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_4_dp"
                    android:layout_marginTop="@dimen/_12_dp"
                    android:layout_marginBottom="@dimen/_8_dp"
                    android:text="@string/team_b"
                    android:textSize="@dimen/_14_sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_12_dp"
                    android:text="@string/_0"
                    android:textSize="@dimen/_56_sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8_dp"
                    android:layout_marginLeft="@dimen/_24_dp"
                    android:layout_marginRight="@dimen/_24_dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/_3_pointer" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8_dp"
                    android:layout_marginLeft="@dimen/_24_dp"
                    android:layout_marginRight="@dimen/_24_dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/_2_pointer" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8_dp"
                    android:layout_marginLeft="@dimen/_24_dp"
                    android:layout_marginRight="@dimen/_24_dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/free_throw" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_12_dp"
            android:onClick="setZero"
            android:text="@string/reset"
            android:textAllCaps="true" />


    </RelativeLayout>
</ScrollView>